[package]
name = "twizsec"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.8", default-features = false, features = [
    "force-soft",
] }

[dev-dependencies]
hex-literal = { version = "0.4.1", default-features = false }
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "capability_ops"
harness = false
